# advent

./: .gitignore  README.md  day01_p2_rust_results.txt  pyproject.toml
advent/: advent_utils.py  day1.py
advent_gleam/: README.md  gleam.toml
advent_gleam/src/: advent_gleam.gleam  advent_utils.gleam
advent_gleam/src/days/: day01.gleam
gleam/year_2023/: README.md  gleam.toml
gleam/year_2023/src/: advent_utils.gleam
gleam/year_2023/test/: year_2023_test.gleam
gleam/year_2024/: README.md  gleam.toml  manifest.toml
gleam/year_2024/src/: advent_utils.gleam  year_2024.gleam
gleamm/: README.md  gleam.toml
gleamm/src/: advent_utils.gleam  gleamm.gleam
gleamm/src/days/: day01.gleam  day02.gleam
gleamm/test/: gleamm_test.gleam
inputs/: day16 copy.txt
mojo/: advent_utils.mojo  advent_utils.🔥  day01.mojo  day1.mojo  main  main.mojo  main.🔥  mojoproject.toml  pixi.toml  test.mojo
mojo/days/: day01.🔥  day16.🔥
mojo/src/: advent_utils.mojo  advent_utils.🔥  main.mojo  main.🔥  test_days.mojo  test_days.🔥
mojo/src/2023/: advent_utils.mojo  main.mojo  test_days.mojo
mojo/src/2024/: advent_utils.mojo  main.mojo  test_solutions.mojo
mojo/src/days/: __init__.mojo  day01.mojo  day01.🔥  day02.mojo  day02.🔥  day03.mojo  day03.🔥  day04.mojo  day04.🔥  day05.mojo  day05.🔥  day06.mojo  day06.🔥  day07.mojo  day07.🔥  day08.mojo  day09.mojo  day10.mojo  day11.mojo  day12.mojo  day13.mojo  day14.mojo  day15.mojo  day16.mojo  day17.mojo
mojo/src/year_2023/: day07.mojo  day12.mojo  main.mojo  test_days.mojo
mojo/src/year_2024/: advent_utils.mojo  main.mojo
python/: advent_utils.py  day01.py  day1.py  day12.py  day12_v2.py  day13.py  day16.py  main.py  pyproject.toml
python/days/: __init__.py  day01.py  day02.py  day12.py
python/src/2021/: game.py
python/src/2021/day1/: day1.py  day3.py
python/src/2022/: day7.py
python/src/2023/: __init__.py  advent_utils.py  main.py
python/src/2023/days/: day12.py
python/src/2024/: advent_utils.py  main.py
python/src/2024/days/: __init__.py  day01.py  day02.py
python/src/days/: day01.py  day02.py
rust/: Cargo.toml
rust/2021/: Cargo.toml
rust/2021/src/: advent.rs  main.rs
rust/2022/: Cargo.toml
rust/2023/: Cargo.toml
rust/2024/: Cargo.toml
rust/src/: advent_utils.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
tests/2024/: day022.txt  day044.txt
zig/src/: advent_utils.zig  day01.zig  day1.zig  main.zig  utils.zig
(+103 files in other folders)
