[tool.poetry]
name = "advent"
version = "0.1.0"
description = "Afvent of Code Problems"
authors = ["Samuel Ibarra <Samuel.E.Ibarra@dell.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
polars = {extras = ["pyarrow", "xlsx2csv"], version = "^0.19.18"}

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.338"
ruff-lsp = "^0.0.45"
ruff = "^0.1.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["ALL"]
fix = true
ignore = [
    "PD010", # Pandas Vet - False Positive with Polars.
    "D203",  # One blank line before class docstring. Conflicts with D213.
    "D213",  # No blank lines allowed before function docstring. Conflicts with D212.
    "EXE",   # Executable python files lints. Don't work on Windows so we cannot use it.
]

target-version = "py312"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D", "PLR0913"]

[tool.ruff.pycodestyle]
max-doc-length = 88

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-type-checking]
strict = true

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", '^\s+\.\.\.']

[tool.pyright]
typeCheckingMode = "strict"
pythonPlatform = "All"
pythonVersion = "3.12"
